--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "module": "uvicorn",
-            "args": ["app2:app","--port","5000"]
+            "args": ["app2:app"]            
         }
     ]
 }
