--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -5,5 +5,7 @@ RUN apt update
 RUN apt install -y libgl1-mesa-glx
 RUN pip3 install --no-cache-dir -r requirements.txt
 COPY . .
-EXPOSE 8000
-CMD exec uvicorn --port 8000 --host 0.0.0.0 app2:app
+ENV PORT=5000
+EXPOSE 5000
+
+CMD ["gunicorn", "-b", "0.0.0.0:${PORT}", "app:app"]
